--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,27 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/lovio.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Lovio</title>
+    <meta name="description" content="Crie sites personalizados de presente para celebrar momentos especiais com Lovio" />
+    <meta name="keywords" content="presente, site, personalizado, amor, aniversário, casamento, lovio" />
+    <meta name="author" content="Lovio Team" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lovio.vercel.app/" />
+    <meta property="og:title" content="Lovio - Sites Personalizados de Presente" />
+    <meta property="og:description" content="Crie sites personalizados de presente para celebrar momentos especiais" />
+    <meta property="og:image" content="https://lovio.vercel.app/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://lovio.vercel.app/" />
+    <meta property="twitter:title" content="Lovio - Sites Personalizados de Presente" />
+    <meta property="twitter:description" content="Crie sites personalizados de presente para celebrar momentos especiais" />
+    <meta property="twitter:image" content="https://lovio.vercel.app/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
